alacritty: update config file

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,28 +1,65 @@
 live_config_reload: true
 
 import:
-  - ~/.config/alacritty/themes/gruvbox_dark.yaml
+  - ~/.config/alacritty/themes/themes/gruvbox_dark.yaml
+
+# Environment
+env:
+  TERM: xterm-256color
+  EDITOR: /usr/bin/nvim
 
 # Shell
 shell:
   program: /bin/zsh
+
+  # title: Alacritty
+  dynamic_title: false
+
+  class:
+    instance: Alacritty
+    general: Alacritty
+
+# Scolling
+scrolling:
+  history: 10000
 
 # Font configuration
 font:
   size: 12
 
   normal:
-    family: FiraCode Nerd Font Mono
+    family: UbuntuMono Nerd Font Mono
     style: Regular
 
   bold:
-    family: FiraCode Nerd Font Mono
+    family: UbuntuMono Nerd Font Mono
     style: Bold
 
   italic:
-    family: FiraCode Nerd Font Mono
+    family: UbuntuMono Nerd Font Mono
     style: Italic
 
   bold_italic:
-    family: FiraCode Nerd Font Mono
+    family: UbuntuMono Nerd Font Mono
     style: Italic Bold
+
+# Cursor
+cursor:
+  style:
+    shape: Block
+    blinking: Off
+
+  vi_mode_style: Block
+  unfocused_hollow: true
+
+# Key bindings
+key_bindings:
+  - { key: K,          mods: Alt,                        action: ScrollPageUp,  }
+  - { key: J,          mods: Alt,                        action: ScrollPageDown }
+  - { key: G,          mods: Alt,                        action: ScrollToTop,   }
+  - { key: G,          mods: Alt|Shift,                  action: ScrollToBottom }
+  - { key: Back,       mods: Control|Shift,              action: ResetFontSize    }
+  - { key: K,          mods: Control|Shift,              action: IncreaseFontSize }
+  - { key: J,          mods: Control|Shift,              action: DecreaseFontSize }
+  - { key: Plus,       mods: Control|Shift,              action: IncreaseFontSize }
+  - { key: Minus,      mods: Control|Shift,              action: DecreaseFontSize }
