--- a/i3/config
+++ b/i3/config
@@ -1,116 +1,127 @@
+# Set the default font for the bar
 font pango:UbuntuMono Nerd Font Mono 14
 
+# Set up the mod key (usually the Super/Windows key)
 set $mod Mod4
 
-exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id xsetroot -solid '#000000' 
-exec --no-startup-id copyq 
-exec --no-startup-id nm-applet 
+# Start applications and services on i3 startup
+exec --no-startup-id dex --autostart --environment i3 # Start applications defined in dex configuration
+exec --no-startup-id xsetroot -solid '#000000' # Set the root window background color to black
+exec --no-startup-id copyq # Start the clipboard manager
+exec --no-startup-id nm-applet # Start the network manager applet
 
-set $appfinder xfce4-appfinder
-set $browserDefault firefox 
-set $browserPrivate firefox --private-window
-set $terminal alacritty  
+# Define keybindings for applications
+set $appfinder xfce4-appfinder # Application launcher
+set $browserDefault firefox # Default web browser
+set $browserPrivate firefox --private-window # Private browsing mode for web browser
+set $terminal alacritty # Default terminal emulator
 
+# Keybindings for launching applications
+bindsym $mod+Shift+d exec $appfinder # Launch the application finder
+bindsym $mod+Shift+Return exec $terminal # Open a new terminal window
+bindsym $mod+b exec $browserDefault # Open the default web browser
+bindsym $mod+Shift+b exec $browserPrivate # Open the web browser in private mode
+bindsym $mod+p exec copyq toggle # Toggle the clipboard manager
+bindsym $mod+y exec scrot # Take a screenshot
+bindsym $mod+Shift+y --release exec scrot -s # Take a screenshot with selection tool
+bindsym $mod+Control+l --release exec i3lock # Lock the screen
 
-bindsym $mod+Shift+d exec $appfinder
-bindsym $mod+Shift+Return exec $terminal
-bindsym $mod+b exec $browserDefault
-bindsym $mod+Shift+b exec $browserPrivate
-bindsym $mod+p exec copyq toggle
-bindsym $mod+y exec scrot  
-bindsym $mod+Shift+y   --release exec scrot -s 
-bindsym $mod+Control+l --release exec i3lock
-
+# Configure window borders
+# 
+# Set default border width for normal windows
 default_border pixel 1
+# Set default border width for floating windows
 default_floating_border pixel 1
 
+# Make specific windows floating by default
 for_window [class="^Xfce4-appfinder$"] floating enable 
 for_window [class="^copyq$"] floating enable
 for_window [class="^Mousepad$"] floating enable
 for_window [class="^pavucontrol$"] floating enable
 for_window [class="^Blueman-manager$"] floating enable
 
+# Assign specific workspaces to applications
 assign [class="^discord$"] 10
 assign [class="^Inkscape$"] 7
 assign [class="^Gimp-2.10$"] 7
 assign [class="^MyPaint$"] 7
 
+# Close the focused window
 bindsym $mod+Shift+q kill
 
-# Use Mouse+$mod to drag floating windows to their wanted position
+# Use the mod key + mouse to drag floating windows to their desired position
 floating_modifier $mod
 
-# move tiling windows via drag & drop by left-clicking into the title bar,
-# or left-clicking anywhere into the window while holding the floating modifier.
+# Move tiling windows via drag & drop by left-clicking in the title bar
+# or left-clicking anywhere in the window while holding the floating modifier
 tiling_drag modifier titlebar
 
-# start a terminal
+# Start a terminal
 bindsym $mod+Return exec alacritty
 
-
-
-# start dmenu (a program launcher)
+# Start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
 
+# Define movement keys
 set $up k
 set $down j
 set $left h
 set $right l
 
-# change focus
+# Change focus between windows
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 
-# alternatively, you can use the cursor keys:
+# Alternatively, use the cursor keys for focus
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
+# Move focused window to different positions
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
-# alternatively, you can use the cursor keys:
+# Alternatively, use the cursor keys for window movement
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
+# Split containers horizontally
 bindsym $mod+v split h
 
-# split in vertical orientation
+# Split containers vertically
 bindsym $mod+n split v
 
-# enter fullscreen mode for the focused container
+# Toggle fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
+# Change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-# toggle tiling / floating
+# Toggle tiling and floating modes
 bindsym $mod+Shift+space floating toggle
 
-# change focus between tiling / floating windows
+# Change focus between tiling and floating windows
 bindsym $mod+space focus mode_toggle
 
-# focus the parent container
+# Focus the parent container (if in a nested layout)
 bindsym $mod+a focus parent
 
+# Move focused container to scratchpad (a hidden workspace)
 bindsym $mod+Shift+equal move scratchpad
 
+# Show the scratchpad
 bindsym $mod+equal scratchpad show
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+# Define workspace names
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -122,7 +133,7 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
+# Switch to specific workspaces
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -134,7 +145,7 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-# move focused container to workspace
+# Move focused container to specific workspaces
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -146,43 +157,45 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# Switch between the current and previous workspace
 bindsym $mod+Tab workspace back_and_forth
 
-# reload the configuration file
+# Reload the i3 configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+
+# Restart i3 (preserves layout/session)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
+
+# Exit i3 (logs out of X session)
 bindsym $mod+Shift+e exec xfce4-session-logout
 
-# resize window (you can also use the mouse for that)
+# Resize windows using keyboard shortcuts
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
+        # Resize window width
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
+        # Same bindings for arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
-# back to normal: Enter or Escape or $mod+r
+
+        # Return to default mode: Enter, Escape, or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
 }
 
+# Enter resize mode
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display workspace bar and system information
 bar {
         status_command i3status
 }
+
