--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,10 +1,8 @@
-live_config_reload = true
-import = ["~/.config/alacritty/themes/gruvbox_dark.toml"]
 
 [env]
 TERM = "xterm-256color"
 
-[shell]
+[terminal.shell]
 program = "/bin/bash"
 
 [window]
@@ -93,3 +91,9 @@ mods = "Alt"
 action = "ScrollToBottom"
 key = "L"
 mods = "Alt"
+
+[general]
+live_config_reload = true
+import = ["~/.config/alacritty/themes/gruvbox_dark.toml"]
+
+[terminal]
