Udpdate status style bar in tmux.cong

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,8 @@ bind-key C-s send-prefix
 set-option -g default-shell /bin/bash
 set-option -g default-terminal "xterm-256color"
 
+set -g status-style 'bg=#333333, fg=#5eacd3'
+
 # Set colorest option 
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
