Update alacritty theme

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -94,6 +94,29 @@ mods = "Alt"
 
 [general]
 live_config_reload = true
-import = ["~/.config/alacritty/themes/gruvbox_dark.toml"]
+
+[colors.normal]
+black = "0x181818"
+red = "0xe25a45"
+green = "0x00a600"
+yellow = "0xfec14c"
+blue = "0x5c5cff"
+magenta = "0xea6ea8"
+cyan = "0x00cfcf"
+white = "0xe4e4ef"
+
+[colors.bright]
+black = '0x4d4d4d'
+red = '0xff6c60'
+green = '0x00ff00'
+yellow =  '0xffffb6'
+blue = '0x96cbfe'
+magenta = '0xff73fd'
+cyan = '0xc6c5fe'
+white = '0xffffff'
+
+[colors.cursor]
+text = "0x181818"
+cursor = "#cd0000"
 
 [terminal]
