Switch file manager from dolphin to thunar

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,7 +9,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 
 # Enviroment variables 
