Switch from wofi laucher to Vicinae

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,12 +5,20 @@ monitor=HDMI-A-1,preferred,auto,1.0
 # Auto start 
 exec-once = waybar
 exec-once = nm-applet &
+exec-once = vicinae server
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = vicinae
+
+# blur
+layerrule = blur,vicinae
+layerrule = ignorealpha 0, vicinae
+
+# disable fade animation for vicinae only
+layerrule = noanim, vicinae
 
 # Enviroment variables 
 env = XCURSOR_SIZE,24
@@ -173,7 +181,7 @@ bind = $mainMod SHIFT, Q, killactive
 bind = $mainMod, M, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, space, togglefloating,
-bind = $mainMod SHIFT, D, exec, $menu
+bind = $mainMod SHIFT, D, exec, $menu toggle
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = CTRL + ALT, L, exec, hyprlock
