--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,72 +1,67 @@
-# Monitor
-monitor=eDP-1,preferred,auto,1.0
-monitor=HDMI-A-1,preferred,auto,1.0
+###################################
+###       MONITORS & STARTUP     ###
+###################################
 
-# Auto start 
+# Monitor configuration
+monitor = eDP-1, preferred, auto, 1.0
+monitor = HDMI-A-1, preferred, auto, 1.0
+
+# Autostart applications
 exec-once = waybar
 exec-once = nm-applet &
 exec-once = vicinae server
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# Set programs that you use
+
+###################################
+###     ENVIRONMENT & PROGRAMS   ###
+###################################
+
+# Commonly used applications
 $terminal = alacritty
+$clipboard = copyq
 $fileManager = thunar
-$menu = vicinae
+$browser = google-chrome-stable
+$drunMenu = vicinae
 
-# blur
-layerrule = blur,vicinae
-layerrule = ignorealpha 0, vicinae
-
-# disable fade animation for vicinae only
-layerrule = noanim, vicinae
-
-# Enviroment variables 
+# Environment variables
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
 
-###################
-### PERMISSIONS ###
-###################
+###################################
+###          LAYER RULES         ###
+###################################
 
-# See https://wiki.hypr.land/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
-
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+# Vicinae blur and transparency
+layerrule = blur, vicinae
+layerrule = ignorealpha 0, vicinae
+layerrule = noanim, vicinae   # Disable animation for Vicinae
 
 
-# Hyprland UI 
+###################################
+###        GENERAL SETTINGS      ###
+###################################
+
 general {
     gaps_in = 2
     gaps_out = 1
-
     border_size = 1
-
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
-
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
+
+
+###################################
+###        DECORATIONS           ###
+###################################
 
 decoration {
     rounding = 10
     rounding_power = 2
-
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
@@ -81,72 +76,76 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-
         vibrancy = 0.1696
     }
 }
 
-# Animations 
+
+###################################
+###          ANIMATIONS          ###
+###################################
+
 animations {
     enabled = yes, please :)
 
-    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
-    #        NAME,           X0,   Y0,   X1,   Y1
+    # Bezier curves
     bezier = easeOutQuint,   0.23, 1,    0.32, 1
     bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
     bezier = linear,         0,    0,    1,    1
     bezier = almostLinear,   0.5,  0.5,  0.75, 1
     bezier = quick,          0.15, 0,    0.1,  1
 
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
+    # Animation types
+    animation = global,        1, 10, default
+    animation = border,        1, 5.39, easeOutQuint
+    animation = windows,       1, 4.79, easeOutQuint
+    animation = windowsIn,     1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut,    1, 1.49, linear, popin 87%
+    animation = fadeIn,        1, 1.73, almostLinear
+    animation = fadeOut,       1, 1.46, almostLinear
+    animation = fade,          1, 3.03, quick
+    animation = layers,        1, 3.81, easeOutQuint
+    animation = layersIn,      1, 4, easeOutQuint, fade
+    animation = layersOut,     1, 1.5, linear, fade
+    animation = fadeLayersIn,  1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces,    1, 1.94, almostLinear, fade
+    animation = workspacesIn,  1, 1.21, almostLinear, fade
+    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = zoomFactor,    1, 7, quick
 }
 
-# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
+###################################
+###            LAYOUTS           ###
+###################################
+
+# Dwindle layout (tiling)
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true
+    preserve_split = true
 }
 
-# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
+# Master layout
 master {
     new_status = master
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#misc
+
+###################################
+###          MISC SETTINGS       ###
+###################################
+
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = -1
+    disable_hyprland_logo = false
 }
 
-# Keybaord & input 
+
+###################################
+###        INPUT & DEVICES       ###
+###################################
+
 input {
     kb_layout = us
     kb_variant =
@@ -155,55 +154,62 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0
 
     touchpad {
         natural_scroll = false
     }
 }
 
-# See https://wiki.hypr.land/Configuring/Gestures
 gesture = 3, horizontal, workspace
 
-# Example per-device config
-# See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
 
-# Keybinds
-$mainMod = SUPER # Sets "Windows" key as main modifier
 
+###################################
+###           KEYBINDS           ###
+###################################
+
+$mainMod = SUPER
+
+# ───── App Launchers ─────
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, F, exec, $fileManager
+bind = $mainMod SHIFT, D, exec, $drunMenu toggle
+bind = $mainMod, P, exec, $clipboard toggle
+
+# ───── Window Management ─────
+bind = $mainMod, F, fullscreen
+bind = $mainMod, space, togglefloating
 bind = $mainMod SHIFT, Q, killactive
-bind = $mainMod, M, exit,
-bind = $mainMod, F, exec, $fileManager
-bind = $mainMod, space, togglefloating,
-bind = $mainMod SHIFT, D, exec, $menu toggle
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, M, exit
+bind = $mainMod, J, togglesplit
+
+# ───── Lock & Screenshots ─────
 bind = CTRL + ALT, L, exec, hyprlock
-bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy # screenshot and save in the clipboard
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" ~/Pictures/screenshots/screenshot_$(date +'%Y-%m-%d_%H-%M-%S').png
 
-
-# Move back and forth between last two workspaces
+# ───── Workspace Navigation ─────
 bind = $mainMod, TAB, workspace, previous
 
-# Move focus with mainMod + arrow keys
+# ───── Focus Movement (arrows) ─────
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Move focus with mainMod + vim keys 
+# ───── Focus Movement (Vim keys) ─────
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# ───── Workspace Switching ─────
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -215,7 +221,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# ───── Move Windows to Workspaces ─────
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -227,19 +233,15 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
+# ───── Workspace Scroll ─────
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# ───── Mouse Actions ─────
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
+# ───── Volume & Brightness ─────
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -247,22 +249,48 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
-# Requires playerctl
+# ───── Media Controls ─────
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Window & Workspaces
 
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
+###################################
+###         WINDOW RULES         ###
+###################################
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# Workspace assignment
+windowrulev2 = workspace 10, class:^(discord)$
+windowrulev2 = workspace 7, class:^(Inkscape)$
+windowrulev2 = workspace 7, class:^(gimp)$
+windowrulev2 = workspace 7, class:^(MyPaint)$
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:1,pinned:0
+
+# Floating windows
+windowrulev2 = float,class:^(mousepad)$
+windowrulev2 = center,class:^(mousepad)$
+windowrulev2 = float,class:^(com.github.hluk.copyq)$
+windowrulev2 = center,class:^(com.github.hluk.copyq)$
+
+# Workspace appearance
+windowrule = bordersize 1, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+
+
+###################################
+###        PERMISSIONS & INFO    ###
+###################################
+
+# See https://wiki.hypr.land/Configuring/Permissions/
+# Permission changes require a Hyprland restart
+ecosystem {
+    enforce_permissions = 0
+}
+
