Add window movement with arrows and vim keys

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -209,6 +209,19 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+
+# ───── Window Movement (arrows) ─────
+bind = $mainMod SHIFT, h, movewindow, l # Left
+bind = $mainMod SHIFT, l, movewindow, r # Right 
+bind = $mainMod SHIFT, k, movewindow, u # Up
+bind = $mainMod SHIFT, j, movewindow, d # Down
+
+# ───── Window Movement (Vim Keys) ─────
+bind = $mainMod SHIFT, left, movewindow, l   
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
 # ───── Workspace Switching ─────
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
