Fix brightness, auto run hyprpaper and fullscreen wdisplays

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,7 +9,9 @@ monitor = HDMI-A-1, preferred, auto, 1.0
 # Autostart applications
 exec-once = waybar
 exec-once = nm-applet &
+exec-once = hyprpaper & 
 exec-once = vicinae server
+exec-once = swayosd-server
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
@@ -259,8 +261,11 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+# bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+# bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise 5
+bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower 5
+
 
 # ───── Media Controls ─────
 bindl = , XF86AudioNext, exec, playerctl next
@@ -287,6 +292,7 @@ windowrulev2 = float,class:^(mousepad)$
 windowrulev2 = center,class:^(mousepad)$
 windowrulev2 = float,class:^(com.github.hluk.copyq)$
 windowrulev2 = center,class:^(com.github.hluk.copyq)$
+windowrulev2 = fullscreen,class:^(wdisplays)$
 
 # Workspace appearance
 windowrule = bordersize 1, floating:0, onworkspace:w[tv1]
