--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,8 +8,10 @@ monitor = HDMI-A-1, preferred, auto, 1.0
 
 # Autostart applications
 exec-once = waybar
+exec-once = copyq
 exec-once = nm-applet &
 exec-once = hyprpaper & 
+exec-once = blueman-applet
 exec-once = vicinae server
 exec-once = swayosd-server
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -17,7 +19,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 
 ###################################
 ###     ENVIRONMENT & PROGRAMS   ###
-###################################
+#################################
 
 # Commonly used applications
 $terminal = alacritty
