Update hyrpland conf with the new syntax

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,9 +38,9 @@ env = HYPRCURSOR_SIZE,24
 ###################################
 
 # Vicinae blur and transparency
-layerrule = blur, vicinae
-layerrule = ignorealpha 0, vicinae
-layerrule = noanim, vicinae   # Disable animation for Vicinae
+layerrule = blur on, match:namespace vicinae
+layerrule = ignore_alpha 0, match:namespace vicinae
+layerrule = no_anim on, match:namespace vicinae   # Disable animation for Vicinae
 
 
 ###################################
@@ -281,28 +281,27 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ###################################
 
 # Workspace assignment
-windowrulev2 = workspace 10, class:^(discord)$
-windowrulev2 = workspace 7, class:^(Inkscape)$
-windowrulev2 = workspace 7, class:^(gimp)$
-windowrulev2 = workspace 7, class:^(MyPaint)$
+windowrule = workspace 10, match:class discord
+windowrule = workspace 7, match:class gimp
+windowrule = workspace 7, match:class MyPaint
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:1,pinned:0
+windowrule =match:xwayland 1,match:float 1,fullscreen on
 
 # Floating windows
-windowrulev2 = float,class:^(mousepad)$
-windowrulev2 = center,class:^(mousepad)$
-windowrulev2 = float,class:^(com.github.hluk.copyq)$
-windowrulev2 = center,class:^(com.github.hluk.copyq)$
-windowrulev2 = fullscreen,class:^(wdisplays)$
+windowrule = float on, match:class mousepad
+windowrule = center on, match:class mousepad
+windowrule = float on, match:class com.github.hluk.copyq
+windowrule = center on, match:class com.github.hluk.copyq
+windowrule = fullscreen on, match:class wdisplays
 
 # Workspace appearance
-windowrule = bordersize 1, floating:0, onworkspace:w[tv1]
-windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 0, floating:0, onworkspace:f[1]
-workspace = w[tv1], gapsout:0, gapsin:0
-workspace = f[1], gapsout:0, gapsin:0
+windowrule = border_size 1, float 0, workspace w[tv1]
+windowrule = rounding 0, float 0, workspace w[tv1]
+windowrule = border_size 0, float 0, workspace f[1]
+windowrule = rounding 0, float 0, workspace f[1]
+workspace = w[tv1], gapsout 0, gapsin:0
+workspace = f[1], gapsout 0, gapsin:0
 
 
 ###################################
